# UMBRIX

./: .env.example  .env.prod.example  .gitignore  DEPLOYMENT.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  pyrightconfig.json  pytest.ini  test_out.txt
backend/alembic/: env.py
backend/alembic/versions/: 1fbcdc4642d4_initial_baseline.py
backend/app/: config.py  dependencies.py  edge_gateway.py  main.py
backend/app/api/: admin.py  assets.py  auth.py  campaigns.py  chatops.py  collaboration.py  compliance.py  events_feed.py  findings.py  health.py  hunt.py  ingest.py  narrative.py  pipeline_status.py  posture.py  reporting.py  settings.py  sigma_rules.py  simulation.py  soar.py
backend/app/consumers/: event_consumer.py
backend/app/engine/: agentic_rag.py  asset_inventory.py  entity_resolution.py  feature_extractor.py  hunt_templates.py  ioc_feed_manager.py  posture_tracker.py  sigma_engine.py
backend/app/middleware/: auth.py  csrf.py  error_handler.py  metrics.py  rate_limit.py  request_id.py  tenant_isolation.py
backend/app/ml/: adversarial.py  ensemble.py  hst.py  meta_learner.py  vae.py
backend/app/repositories/: clickhouse.py  inmemory.py  postgres.py  redis_store.py
backend/app/schemas/: canonical_event.py
backend/app/services/: alerting.py  campaign_engine.py  compliance.py  (+10 more)
backend/execution/: train_all_models.py
backend/models/: vae.pth
backend/scripts/: evaluate_real_traffic.py  generate_sigma_rules.py  training_pipeline.py  verify_adversarial.py  verify_campaign_engine.py  verify_models.py  verify_soar_engine.py
backend/tests/: conftest.py  test_agentic_rag.py  test_api_routes.py  test_decision_engine.py  test_integration.py  test_ioc_store.py  test_phase33_verification.py  test_pipeline.py  test_rate_limiting.py  test_schemas.py  test_sigma_engine.py  test_tier1_blockers.py
(+86 files in other folders)
