[project]
name = "sentinel-fabric-backend"
version = "2.0.0"
description = "Sentinel Fabric V2 — Real-time security posture intelligence backend"
requires-python = ">=3.11"
dependencies = [
    # ── Core Framework ──
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "python-dotenv==1.0.1",

    # ── Databases ──
    "clickhouse-connect==0.7.0",
    "redis[hiredis]==5.0.0",
    "asyncpg==0.29.0",
    "sqlalchemy[asyncio]==2.0.0",

    # ── Messaging ──
    "aiokafka==0.11.0",
    "sse-starlette==2.0.0",

    # ── Auth ──
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",

    # ── ML Core ──
    "xgboost==2.0.0",
    "lightgbm==4.0.0",
    "torch==2.2.0",
    "river==0.21.0",
    "shap==0.44.0",
    "scikit-learn==1.4.0",
    "numpy==1.26.0",

    # ── Vector Search ──
    "qdrant-client==1.9.0",

    # ── Model Registry ──
    "mlflow==2.14.0",

    # ── AI Agents ──
    "langchain==0.1.0",
    "langchain-openai==0.1.0",
    "langgraph==0.0.26",

    # ── Reporting ──
    "reportlab==4.0.0",
    "apscheduler==3.10.4",

    # ── HTTP Client ──
    "httpx==0.27.0",

    # ── SOAR SDKs ──
    "crowdstrike-falconpy==1.4.0",

    # ── Observability ──
    "structlog==24.1.0",
    "prometheus-client==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.5.0",
    # Required for test imports: also a prod dep but must be listed in dev
    # to avoid ImportError when running tests outside the full venv.
    "apscheduler==3.10.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
